Refactor CustomerControllerTest to improve test coverage